# calibre-cli-docker-interface

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  handlers.py  main.py  state.py  templating.py
app/routes/: cover.py  device.py  health.py  jobs.py  library.py  upload.py
app/services/: auth.py  calibre_cli.py  db.py  device.py  mtp_helper.py  snapshot.py  worker.py
app/static/: calibre-web-cli.css
app/templates/: base.html  detail.html  jobs.html  library.html
app/templates/_fragments/: book_card.html  convert_dialog.html  convert_modal_shell.html  device_status.html  job_row.html  refresh_modal.html  search_suggestions.html  upload_modal.html
docs/: synology.md  troubleshooting.md  udev.md
tests/fakes/: books.py  mtp.py
tests/fixtures/: build_minimal_db.py  metadata_minimal.db
tests/routes/: conftest.py  test_cover_routes.py  test_device_routes.py  test_health_routes.py  test_jobs_routes.py  test_library_routes.py  test_send_integration.py  test_upload_routes.py
tests/unit/: test_auth.py  test_calibre_cli.py  test_config.py  test_db.py  test_device.py  test_mtp_helper.py  test_snapshot.py  test_worker.py
